# MAPA_PDF

./: .gitignore  PLANOS_FORESTALES.md  PROYECTO_COMPLETO.md  build_exe.py  build_portable.py  generador_planos.py  installer.iss  plan.md  pyproject.toml  requirements.txt
assets/: crear_icono.py
docs/: generar_manual_pdf.py
generador_planos/: __init__.py  __main__.py  main.py  requirements.txt
generador_planos/gui/: __init__.py  app.py  estilos.py  panel_cajetin.py  panel_campos.py  panel_capas.py  panel_config.py  panel_filtros.py  panel_generacion.py  panel_info.py  panel_simbologia.py
generador_planos/motor/: __init__.py  _elementos_mapa.py  _utils_geo.py  capas_extra.py  cartografia.py  escala.py  generador.py  maquetacion.py  paginas_especiales.py  perfil.py  plantillas_layout.py  proyecto.py  simbologia.py
tests/: test_cartografia_crs.py  test_escala.py  test_proyecto.py  test_simbologia.py  test_utils_geo.py
