[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "generador-planos-forestales"
version = "2.0.0"
description = "Generador de planos cartográficos profesionales para infraestructuras forestales"
readme = "PLANOS_FORESTALES.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Jose Caballero"},
]
keywords = ["cartografía", "forestal", "planos", "SHP", "PDF", "INFOCA"]

dependencies = [
    "geopandas>=0.14",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "requests>=2.31",
    "Pillow>=10.0",
    "contextily>=1.6",
    "pyproj>=3.6",
    "reportlab>=4.0",
    "shapely>=2.0",
    "adjustText>=1.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
installer = ["pyinstaller>=6.0"]

[project.scripts]
generador-planos = "generador_planos.main:main"

[project.gui-scripts]
generador-planos-gui = "generador_planos.main:main"

[tool.setuptools.packages.find]
include = ["generador_planos*"]
exclude = ["tests*", "dist*", "build*"]
